src/ui/features/plan_review/tests/snapshots/terracotta__ui__features__plan_review__list__tests__empty_plan_list_shows_zero_summary.snap
---
source: src/ui/features/plan_review/tests/render_snapshots.rs
expression: "buffer_text(&render_to_buffer(&state, 80, 12))"
---
Terracotta | Target unavailable
Git: working tree vs HEAD
┌Plan──────────────────────────────────────────────────────────────────────────┐
│+0 create  ~0 update  R0 replace  -0 delete                                   │
│Needs review: 0/0   Filter: All                                               │
│──────────────────────────────────────────────────────────────────────────────│
│No resource changes.                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q quit | j/k/↑/↓ select
