src/ui/features/plan_review/tests/snapshots/terracotta__ui__features__plan_review__list__tests__narrow_plan_list_keeps_resource_rows_on_one_line.snap
---
source: src/ui/features/plan_review/tests/render_snapshots.rs
expression: "buffer_text(&render_to_buffer(&state, 60, 16))"
---
Terracotta | Target unavailable
Git: working tree vs HEAD
┌Plan──────────────────────────────────────────────────────┐
│+1 create  ~1 update  R1 replace  -1 delete               │
│Needs review: 2/4   Filter: All (f)                       │
│──────────────────────────────────────────────────────────│
│! no direct match | ? analysis incomplete                 │
│Unshown changes: output (1)                               │
│     ACTION  RESOURCE                                     │
│>    ~       aws_instance.api                             │
│     +       aws_s3_bucket.logs_with_a_very_long_reso...  │
│  !? R       aws_instance.worker                          │
│  !  -       aws_security_group.old                       │
└──────────────────────────────────────────────────────────┘
q quit | Enter details | j/k/↑/↓ select | f change filter
/ edit search
