src/ui/features/plan_review/tests/snapshots/terracotta__ui__features__plan_review__list__tests__narrow_plan_list_wraps_git_evidence.snap
---
source: src/ui/features/plan_review/tests/render_snapshots.rs
expression: "buffer_text(&render_to_buffer(&state, 60, 16))"
---
Terracotta | Target unavailable
Git: working tree vs HEAD
┌Plan──────────────────────────────────────────────────────┐
│+1 create  ~1 update  R1 replace  -1 delete               │
│Needs review: 2/4   Filter: All (f)                       │
│──────────────────────────────────────────────────────────│
│Unshown changes: output (1)                               │
│    ACTION  RESOURCE / GIT                                │
│>   ~       aws_instance.api                              │
│            direct: main.tf:42-46                         │
│    +       aws_s3_bucket.logs_with_a_very_long_resourc...│
│            direct: storage.tf:8-10                       │
│                                                          │
└──────────────────────────────────────────────────────────┘
q quit | j/k/↑/↓ select | Enter details | f change filter
/ edit search
