src/ui/features/plan_review/tests/snapshots/terracotta__ui__features__plan_review__list__tests__plan_list_shows_actions_selection_and_attention_legend.snap
---
source: src/ui/features/plan_review/tests/render_snapshots.rs
expression: "buffer_text(&render_to_buffer(&state, REPRESENTATIVE_TERMINAL_SIZE.0,\nREPRESENTATIVE_TERMINAL_SIZE.1,))"
---
Terracotta | Target unavailable
Git: working tree vs HEAD
┌Plan───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+1 create  ~1 update  R1 replace  -1 delete                                                                                                                        │
│Needs review: 2/4   Filter: All (f)                                                                                                                                │
│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│! no direct match | ? analysis incomplete                                                                                                                          │
│Unshown changes: output (1)                                                                                                                                        │
│     ACTION     RESOURCE                                                                                                                                           │
│>    ~ update   aws_instance.api                                                                                                                                   │
│     + create   aws_s3_bucket.logs_with_a_very_long_resource_address_that_needs_truncation_for_narrow_terminal                                                     │
│  !? R replace  aws_instance.worker                                                                                                                                │
│  !  - delete   aws_security_group.old                                                                                                                             │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit | Enter details | j/k/↑/↓ select | f change filter | / edit search
