src/ui/features/plan_review/tests/snapshots/terracotta__ui__features__plan_review__list__tests__plan_list_shows_actions_selection_and_git_evidence.snap
---
source: src/ui/features/plan_review/tests/render_snapshots.rs
expression: "buffer_text(&render_to_buffer(&state, REPRESENTATIVE_TERMINAL_SIZE.0,\nREPRESENTATIVE_TERMINAL_SIZE.1,))"
---
┌Terracotta / Plan──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│compare working tree vs HEAD                                                                                                                                       │
│+1 create  ~1 update  R1 replace  -1 delete                                                                                                                        │
│Needs review: 2 / 4   Filter: All                                                                                                                                  │
│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│Unshown changes: output (1)                                                                                                                                        │
│    ACTION  RESOURCE                                                                                        GIT                                                    │
│>   ~       aws_instance.api                                                                                direct: main.tf:42-46                                  │
│    +       aws_s3_bucket.logs_with_a_very_long_resource_address_that_needs_truncation_for_narrow_terminal  direct: storage.tf:8-10                                │
│  ! R       aws_instance.worker                                                                             incomplete                                             │
│  ! -       aws_security_group.old                                                                          no match                                               │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│q quit | j/k/↑/↓ select | Enter details | f filter | / search                                                                                                      │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
