src/ui/features/plan_review/tests/snapshots/terracotta__ui__features__plan_review__list__tests__realistic_plan_list_120x40.snap
---
source: src/ui/features/plan_review/tests/render_snapshots.rs
expression: "buffer_text(&render_to_buffer(&state, 120, 40))"
---
Terracotta | repo / environments/development/main                                                   branch: feature/ui07
Git: working tree vs HEAD
┌Plan──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│+0 create  ~1 update  R0 replace  -0 delete                                                                           │
│Needs review: 0/1   Filter: All (f)                                                                                   │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│    ACTION     RESOURCE            GIT                                                                                │
│>   ~ update   terraform_data.api  direct: environments/development/main/service.tf:12-16                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit | y resource | Y plan | j/k/↑/↓ select | Enter details | f change filter | / edit search
